welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:3: error: illegal start of simple pattern
	var = facevert = false
            ^SlugTracking:4: error: '=' expected but ';' found.
	if (!estFaceMur == false){ 
^